...
            nav.tabBarItem.accessibilityIdentifier = id
            nav.isNavigationBarHidden = false
            nav.delegate = context.coordinator
            return nav
        }

        let marketNav = makeNav(MarketplaceView(), title: loc("商店"), image: "cart", id: "tab.market")
        let esimsNav = makeNav(MyEsimView(), title: loc("我的 eSIM"), image: "simcard", id: "tab.my_esim")
        let accountNav = makeNav(AccountView(), title: loc("个人资料"), image: "person.circle", id: "tab.account")

        tab.viewControllers = [marketNav, esimsNav, accountNav]
        tab.selectedIndex = 0
        navBridge.currentNav = marketNav
        navBridge.bannerCenterRef = bannerCenter
        tab.delegate = context.coordinator
...
